# public_ip_app

./: LICENSE  README.md  pyproject.toml
src/: ip_service.py  main.py
tests/: test_ip.py
