[project]
name = "public-ip-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rain-zk", email = "rainradcliffe@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.33.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
